# CXEngine

./: .gitignore  .gitmodules  CMakeLists.txt  dist.sh  launch.json  launcher.bat  launcher.sh  readme.md  rm_dist.sh
client/: CMakeLists.txt
client/src/: camera.cpp  camera.h  game.cpp  game.h  input_manager.cpp  input_manager.h  main.cpp  net.cpp  net.h  resource_manager.cpp  resource_manager.h  sprite_batch.cpp  sprite_batch.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture_manager.cpp  texture_manager.h  ui.cpp  ui.h  window.cpp  window.h
client/src/actor/: move.cpp  move.h
client/src/animation/: sprite.cpp  sprite.h
client/src/audio/: audio_manager.cpp  audio_manager.h
client/src/graphics/: bitmap.cpp  bitmap.h  image.h  shader.cpp  shader.h  texture.cpp  texture.h  ui_renderer.cpp  ui_renderer.h
client/src/math/: vector.cpp  vector.h
client/src/pch/: precompile.h
client/src/scene/: base_scene.cpp  base_scene.h  game_map.cpp  game_map.h  scene_manager.cpp  scene_manager.h
cxluax/: CMakeLists.txt
cxluax/src/: asio_test.cpp  asio_test.h  coordinate.cpp  coordinate.h  lua_ezio_net.cpp  lua_ezio_net.h  main.cpp  net.cpp  net.h  record.cpp  record.h  window.cpp  window.h
cxluax/src/client/: kcp_client.cpp  kcp_client.hpp  kcp_client_util.cpp  kcp_client_wrap.cpp  kcp_client_wrap.hpp  threadsafe_queue_mutex.hpp
cxluax/src/pch/: precompile.h
cxluax/src/server/: asio_kcp_log.hpp  connection.cpp  connection.hpp  connection_container.cpp  connection_container.hpp  connection_manager.cpp  connection_manager.hpp  server.cpp  server.hpp
cxluax3d/: CMakeLists.txt
cxluax3d/src/: main.cpp  window.cpp
cxluax3d/src/pch/: precompile.cpp  precompile.h
cxluax3d/src/render/: render.cpp  render.h  shader.cpp  shader.h
internals/: CMakeLists.txt
internals/NESupport/: .gitignore  CMakeLists.txt
internals/NESupport/cmake/: HelperMacroFunction.cmake  NESupportConfig.cmake
internals/NESupport/include/: NESupport.h
internals/NESupport/src/: NESupport.cpp
internals/NESupport/test/: CMakeLists.txt  main.cpp
internals/asio/: CMakeLists.txt
internals/asio/cmake/: asioConfig.cmake
internals/cxlua/: CMakeLists.txt
internals/cxlua/cmake/: CXLuaConfig.cmake
internals/cxlua/include/: NESupport.h  any.h  cxlua.h  cxmath.h  cxrandom.h  define_types.h  lua_bind.h  lua_net.h  luadbg.h  net_thread_queue.h  pos.h  singleton.h  singleton.inl  string_utils.h  tsv.h  utils.h
internals/cxlua/src/: NESupport.cpp  cxlua.cpp  cxmath.cpp  cxrandom.cpp  lua_net.cpp  luadbg.cpp  net_thread_queue.cpp  tsv.cpp  utils.cpp  xyq_support.cpp
internals/ejoy2d/: .gitignore  CMakeLists.txt
internals/ejoy2d/cmake/: ejoy2dConfig.cmake
internals/ejoy2d/lib/: label.c  list.h  shader.c
internals/ezio-cmake/: .gitignore  CMakeLists.txt
internals/ezio-cmake/cmake/: EZIOConfig.cmake  KBase-CMakeLists.txt.in
internals/gsm-cmake/: CMakeLists.txt  ChangeLog  Makefile
internals/gsm-cmake/add-test/: add_test.c
internals/gsm-cmake/cmake/: gsmConfig.cmake
internals/gsm-cmake/inc/: gsm.h  private.h
internals/gsm-cmake/man/: bitter.1  gsm.3  gsm_explode.3  gsm_option.3  gsm_print.3  toast.1
internals/gsm-cmake/src/: toast.c  toast_lin.c
internals/gsm-cmake/tls/: bitter.c  ginger.c  sour.c  sweet.c  taste.h
internals/imgui/: CMakeLists.txt
internals/imgui/cmake/: HelperMacroFunction.cmake  IMGuiConfig.cmake
internals/imgui/examples/: imgui_examples.sln
internals/imgui/extra/: imgui_impl.cpp  imgui_iterator_dock.h  wrap_imgui_impl.cpp
internals/imgui/include/: imgui_iterator.h  wrap_imgui_impl.h
internals/kbase-cmake/: CMakeLists.txt  LICENSE
internals/kbase-cmake/cmake/: KBaseConfig.cmake
internals/kcp/: CMakeLists.txt
internals/kcp/cmake/: kcpConfig.cmake
internals/kcp/include/: ikcp.h
internals/kcp/src/: ikcp.c
internals/lua-cmake/: CMakeLists.txt
internals/lua-cmake/cmake/: LuaConfig.cmake
internals/lua-cmake/test/: CMakeLists.txt  main.cpp
internals/luacjson-cmake/: CMakeLists.txt
internals/luacjson-cmake/cmake/: LuaCJsonConfig.cmake
internals/luacjson-cmake/src/: lua_cjson.c
internals/luadebugger/: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_extension.sh  launch.sh
internals/luadebugger/internals/: CMakeLists.txt
internals/luadebugger/luadbg/: .gitignore  CMakeLists.txt  debuggee.lua  debugger.lua  generate_inl.sh
internals/luadebugger/test/: .gitignore  CMakeLists.txt  hello.lua  main.lua
internals/luadebugger/vscode/: .gitignore  CMakeLists.txt  README.md  dist.sh  main.lua  package.json
internals/miniaudio-cmake/: .gitignore  CMakeLists.txt  miniaudio.h
internals/miniaudio-cmake/cmake/: HelperMacroFunction.cmake  miniaudioConfig.cmake
internals/miniaudio-cmake/extras/: dr_wav.h
internals/moongl/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
internals/moongl/cmake/: moonglConfig.cmake
internals/moongl/doc/: Makefile  buffer_objects.adoc  command_execution.adoc  compute_shaders.adoc  data_handling.adoc  debug_output.adoc  enumerations.adoc  fragment_shaders.adoc  framebuffer_objects.adoc  hints.adoc  index.adoc  index.html  introduction.adoc  per_fragment_operations.adoc  preface.adoc  queries.adoc  rasterization.adoc  reading_and_copying_pixels.adoc  shaders_and_programs.adoc  snippets.adoc  state_and_state_requests.adoc  synchronization.adoc  textures_and_samplers.adoc  vertex_arrays.adoc  vertex_attributes.adoc  vertex_post_processing.adoc  vertices.adoc  whole_framebuffer.adoc
internals/moongl/examples/: get.lua  hello-fltk.lua  hello-glfw.lua  hello-glut.lua  triangle.lua  versions.lua
internals/moongl/moongl/: make.lua  nongl.lua  wrappers.lua
internals/moongl/src/: Makefile  _make  bitfield.c  bitfield.h  buffer.c  capabilities.c  debug.c  draw.c  enums.c  enums.h  framebuffer.c  func.c  func.h  get.c  getintformat.c  getstring.c  getuniform.c  getvertex.c  hint.c  init.c  internal.h  (+25 more)
internals/nanovg/: CMakeLists.txt
internals/nlohmann/: CMakeLists.txt
server/: .gitignore  CMakeLists.txt
server/src/: main.cpp  server.cpp  server.h
(+738 files in other folders)
