cmake_minimum_required ( VERSION 3.5 )
project ( internals  )
#set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/dist )

add_subdirectory(kbase-cmake)
add_subdirectory(ezio-cmake)
add_subdirectory(asio)
add_subdirectory(kcp)
add_subdirectory(lua-cmake)
add_subdirectory(luacjson-cmake)
add_subdirectory(cxlua)
add_subdirectory(luadebugger/luadbg)
add_subdirectory(imgui)
add_subdirectory(gsm-cmake)
add_subdirectory(miniaudio-cmake)
add_subdirectory(nanovg)
add_subdirectory(ejoy2d)
add_subdirectory(moongl)
